# holospace

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: kinect2.h  kinect2.hpp
scripts/: docker-clean.sh  docker-run.sh
src/: CMakeLists.txt  main.cpp
src/devices/: kinect2.cpp
